[gd_scene load_steps=3 format=3 uid="uid://dfymr03ncw1dg"]

[ext_resource type="Script" path="res://ui/upgrades/upgrades_box/upgrade_box.gd" id="1_uhm26"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bw3q0"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[node name="UpgradeBox" type="Panel" groups=["UpgradesBox"]]
offset_left = 99.0
offset_top = 55.0
offset_right = 240.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bw3q0")
script = ExtResource("1_uhm26")
title = "Hull Health"

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="Container"]
layout_mode = 2
text = "Hull Heath"
horizontal_alignment = 1

[node name="Container" type="HBoxContainer" parent="Container"]
layout_mode = 2
alignment = 1

[node name="RemoveButton" type="Button" parent="Container/Container"]
layout_mode = 2
text = "-"

[node name="Level" type="Panel" parent="Container/Container"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_bw3q0")

[node name="Current" type="Label" parent="Container/Container/Level"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 42.0
offset_bottom = 22.0
text = "1"

[node name="Separation" type="Label" parent="Container/Container/Level"]
modulate = Color(0.605274, 0.605274, 0.605274, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "/"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Max" type="Label" parent="Container/Container/Level"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -22.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
text = "1"
horizontal_alignment = 2

[node name="AddButton" type="Button" parent="Container/Container"]
layout_mode = 2
text = "+"

[connection signal="pressed" from="Container/Container/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="Container/Container/AddButton" to="." method="_on_add_button_pressed"]
